# python_jira_extended

./: .gitignore  readme.md  requirements.txt  setup.cfg  setup.py
jira_extended/: __init__.py  jira_extended.py
jira_extended/jira_extended.egg-info/: requires.txt  top_level.txt
src/jira_extended/: jira.py  jira_extended.py
src/jira_extended.egg-info/: PKG-INFO  SOURCES.txt
