[metadata]
name = python_jira_extended
version = 0.0.1
author = Thomas Fontana
author_email = thomas@fontana.onl
description = This package extendes the standard jira-python capabilities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomtana/python_jira_extended
project_urls =
    Bug Tracker = https://github.com/tomtana/python_jira_extended/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src